# ml-tadpolemetry

./: .gitignore  README.md  main.py  pyproject.toml
app/: inference.py  train.py
app/data/: preprocess.py
app/inference/: inference.py
app/training/: train.py
app/training/configs/: config_scale_model.yml  config_spline_model.yml
app/utils/: split-training-data.py
app/utils/ls-json-to-yolo/: README.md  convert.py  project-2-at-2026-03-15-02-23-a2a8c515.json
data/training/: .gitignore
data/training/configs/: config_scale_model.yml  config_spline_model.yml
docs/: tw-notes.md
runs/pose/train/: args.yaml
runs/scale_model_output/best/: args.yaml  results.csv
runs/scale_model_output/run_20260315_132415/: args.yaml
runs/scale_model_output/run_20260402_220425/: args.yaml  results.csv
runs/spline_model_output/best/: args.yaml  results.csv
runs/spline_model_output/old2/: args.yaml
runs/spline_model_output/old3/: args.yaml
runs/spline_model_output/run_20260326_183259/: args.yaml
runs/spline_model_output/run_20260327_091729/: args.yaml  results.csv
runs/spline_model_output/run_20260327_093343/: args.yaml
runs/spline_model_output/run_20260327_093544/: args.yaml  results.csv
scripts/: convert-ls-json-to-yolo.py  make-curvy-tadpoles.py  preprocess-bw-demo.py  relate-sample-id-to-photo-googletakeout.py  split-training-data.py  test-training-labels.py  validate-training-labels.py
tadpolemetry/: _inference_old.py  analyze.py  cli.py  inference.py  logging.py  pipeline.py  train.py
tests/: test_pipeline.py
(+113 files in other folders)
