[project]
name = "ml-tadpolemetry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.11.0",
    "typer>=0.24.1",
    "ultralytics>=8.4.22",
]
[tool.setuptools]
packages = ["tadpolemetry"]
[dependency-groups]
dev = [
    "torch>=2.10.0",
]
[project.scripts]
tadpolemetry = "tadpolemetry.cli:app"
